Changing how the version checker works.
Now we only give a warning when UMIL is outdated.

--- a/umil/root/umil/style/overall_header.html
+++ b/umil/root/umil/style/overall_header.html
@@ -92,3 +92,11 @@ function dE(n, s, type)
 					</div>
 
 					<div id="main" class="install-body">
+
+		 <!-- IF S_BOARD_DISABLED -->
+		<div class="rules">
+			<div class="inner"><span class="corners-top"><span></span></span>
+				<strong>{L_INFORMATION}:</strong> {L_BOARD_DISABLED}
+			<span class="corners-bottom"><span></span></span></div>
+		</div>
+		<!-- ENDIF -->
