[Fix] Include the stylesheet so we can get the correct image paths for the style.
[Feature] Give mod authors the option to specify their own image in UMIL auto or if using the UMIL frontend.  Suggested by michaelo

--- a/umil/root/umil/style/overall_header.html
+++ b/umil/root/umil/style/overall_header.html
@@ -9,7 +9,7 @@
 <!-- IF META -->{META}<!-- ENDIF -->
 <title>{PAGE_TITLE}</title>
 
-<link href="{UMIL_ROOT_PATH}style/style.css" rel="stylesheet" type="text/css" media="screen" />
+<!-- INCLUDE style.css -->
 
 <script type="text/javascript">
 // <![CDATA[
