Alright, we don't really need to include all of the CSS...

--- a/umil/root/umil/style/overall_header.html
+++ b/umil/root/umil/style/overall_header.html
@@ -9,7 +9,9 @@
 <!-- IF META -->{META}<!-- ENDIF -->
 <title>{PAGE_TITLE}</title>
 
-<!-- INCLUDE style.css -->
+<link href="{UMIL_ROOT_PATH}style/style.css" rel="stylesheet" type="text/css" media="screen" />
+
+<!-- INCLUDE parse.css -->
 
 <script type="text/javascript">
 // <![CDATA[
