If Automod is installed, Show link after uninstall is complete

--- a/umil/root/umil/style/index_body.html
+++ b/umil/root/umil/style/index_body.html
@@ -83,6 +83,13 @@
 	<!-- ENDIF -->
 
 	<!-- IF .results -->
+		<!-- IF S_UNINSTALL_SUCCESS -->
+			<div class="successbox">
+				<h3>{L_SUCCESS}</h3>
+				<p>{U_AUTOMOD_LINK}</p>
+			</div>
+		<!-- ENDIF -->
+		
 	<fieldset>
 		<legend></legend>
 		<!-- BEGIN results -->
